# mcp-obsidian

./: .env.example  DEPLOYMENT_PLAN.md  FEATURES.md  PHASE2_PLAN.md  PHASE2_TEST_REPORT.md  PHASE4_IMPLEMENTATION.md  PHASE4_TEST_REPORT.md  README_UPDATED.md  TEST_REPORT.md  pyproject.toml  test_api.py  test_detailed.py  test_new_tools.py  test_phase2_semantic.py  test_phase4_tools.py  vault-config.json
.mcp-obsidian/: embeddings-cache.json  index-metadata.json
src/api/: __init__.py  auth.py  middleware.py  models.py  server.py
src/api/routers/: __init__.py
src/mcp_obsidian/: config.py  obsidian.py  server.py  tools.py
src/mcp_obsidian/analyzers/: __init__.py  frontmatter.py  structure.py
src/mcp_obsidian/knowledge/: __init__.py  daily.py  people.py  projects.py
src/mcp_obsidian/semantic/: __init__.py  embeddings.py  links.py  relationships.py  search.py
